# spooky-language

./: .clippy.toml  .gitignore  .rustfmt.toml  CONTRIBUTOR_BIBLE.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: check-label-in-progress.yml  ci.yml  workflow-runs-purge-dispatch.yml  workflow-runs-purge.yml
crates/greeter_cli/: Cargo.toml
crates/greeter_cli/src/: main.rs
crates/greeter_mock/: Cargo.toml
crates/greeter_mock/src/: main.rs
crates/greeter_service/: Cargo.toml
crates/greeter_service/src/: lib.rs  service.rs  traits.rs
crates/spooky_compiler/: Cargo.toml
crates/spooky_compiler/src/: lib.rs
crates/spooky_compiler/src/application/: main.rs
crates/spooky_lexer/: Cargo.toml
crates/spooky_lexer/src/: lib.rs
crates/spooky_parser/: Cargo.toml
crates/spooky_parser/src/: lib.rs
