[package]
name = "spooky_lexer"
description = "Lexical analyzer"
version = "0.0.0-semver"

keywords = [
  "Spooky",
  "quantum-programming",
  "quantum-circuit",
  "quantum-circuit-synthesis",
  "quantum-program-verification",
  "linear-dependent-types",
  "homotopy-type-theory",
  "higher-inductive-types",
]

categories = [
  "Programming language",
  "Compiler",
  "Type checker",
  "Quantum programming",
]

edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# ---------------------------------------------------------------------------------------------------------------------
# Targets configuration
# ---------------------------------------------------------------------------------------------------------------------

# Library target settings
[lib]
name = "spooky_lexer"                 # Target name (final name will be libspooky_lexer)
path = "src/lib.rs"                   # Target's source file path
test = true                           # Target must be tested by default
doctest = false                       # Documentation examples are tested by default
bench = true                          # Target must be benchmarked by default
doc = true                            # Library is documented by default.
crate-type = ["lib"]                  # Target's crate types to be generated

# ---------------------------------------------------------------------------------------------------------------------
# Package features
# ---------------------------------------------------------------------------------------------------------------------

[features]

default = []

# ---------------------------------------------------------------------------------------------------------------------
# Package dependencies
# ---------------------------------------------------------------------------------------------------------------------

[dependencies]

# Errors and logs processing
log = { workspace = true }
thiserror = { workspace = true }
